--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,9 +27,8 @@ jobs:
           echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
           
     - name: Build the Docker image
-      env:
-        DISCORD_TOKEN: ${{secrets.VPS_HOST}}
-      run: docker build . --file Dockerfile --build-arg DISCORD_TOKEN=$DISCORD_TOKEN --tag pecet31/discordbot:latest
+     
+      run: docker build . --file Dockerfile --tag pecet31/discordbot:latest
 
     - name: Deploy on the VPS
       env:
